cmake_minimum_required(VERSION 3.22)
project(cpp)
set(CMAKE_CXX_STANDARD 20)
add_subdirectory(StructuredBinding)
add_subdirectory(Trivial)
add_subdirectory(StandardLayout)
add_subdirectory(Concurrency)
add_subdirectory(Concept)
add_subdirectory(Requires)
add_subdirectory(VariadicTemplate)
add_subdirectory(Allocator)
add_subdirectory(Algorithm)