add_executable(01_asyncVersusThread 01_asyncVersusThread.cpp)
add_executable(02_asyncLazy 02_asyncLazy.cpp)
add_executable(03_fireAndForgetFutures 03_fireAndForgetFutures.cpp)
add_executable(04_dotProductAsync 04_dotProductAsync.cpp)
add_executable(05_packagedTask 05_packagedTask.cpp)
add_executable(06_packagedTaskReuse 06_packagedTaskReuse.cpp)
add_executable(07_promiseFuture 07_promiseFuture.cpp)
add_executable(08_waitFor 08_waitFor.cpp)
add_executable(09_sharedFuture 09_sharedFuture.cpp)
add_executable(10_sharedFutureFromFuture 10_sharedFutureFromFuture.cpp)
add_executable(11_promiseFutureException 11_promiseFutureException.cpp)
add_executable(12_promiseFutureSynchronise 12_promiseFutureSynchronise.cpp)